# AirCode

./: .env.example  .gitignore  .npmrc  CLAUDE.md  Makefile  README.md  aircode.spec  components.json  electron-builder.yml5  electron.vite.config.ts  package-lock.json  package.json  tsconfig.base.json  tsconfig.json  tsconfig.node.json  tsconfig.web.json
apps/desktop/: package.json  tsconfig.host.json  tsconfig.json  vite.config.ts
apps/desktop/host/: index.ts
apps/desktop/src/: App.tsx  main.tsx
apps/desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/desktop/src-tauri/capabilities/: default.json
apps/desktop/src-tauri/icons/: icon.icns
apps/desktop/src-tauri/src/: lib.rs  main.rs
apps/server/: package.json  tsconfig.json
apps/server/src/: app.ts  index.ts  sse.ts
apps/smoke-cli/: package.json  tsconfig.json
apps/smoke-cli/src/: index.ts
apps/web/: index.html  package.json  tsconfig.json  vite.config.ts
apps/web/src/: App.tsx  air-design.d.ts  main.tsx  styles.css
backend/: main.py
backend/api/: __init__.py  base.py  editor.py  git.py  pipeline.py  project.py  settings.py  terminal.py
docs/superpowers/plans/: 2026-05-09-project-ide-module.md  2026-05-31-local-storage.md  2026-05-31-pipeline.md  2026-05-31-python-pywebview-rebuild.md  2026-06-01-git-panel.md  (+1 more)
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/src/: App.tsx  index.css
release/: icon.icns
resources/: icon.icns
scripts/: link-deps.sh  setup.sh
src/main/: index.ts
src/preload/: index.ts
src/renderer/: App.tsx  index.html  styles.css
(+87 files in other folders)
