[package]
name = "aircode"
version = "0.1.0"
description = "AirCode desktop shell (Tauri + Pi agent host)"
authors = ["AirCode"]
edition = "2021"

[lib]
name = "aircode_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process", "io-util", "sync", "time"] }
uuid = { version = "1", features = ["v4"] }
thiserror = "2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
